<resources>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="app_name_test" translatable="false"> ShopListTest</string>
    <string name="sort_by_date" translatable="false">switch_preference_sort_by_name</string>
    <string name="color_lists_pref" translatable="false" >color_lists_pref</string>
    <string name="color_items_pref" translatable="false">color_items_pref</string>

    <string name="time_value" translatable="false">Time</string>
    <string name="title_value" translatable="false">Title</string>
    <string name="color_title_pref_value" translatable="false">Color -> Title</string>
    <string name="color_time_pref_value" translatable="false">Color -> Time</string>







    <string name="app_name">Shopping List</string>
    <string name="text_view">TextView</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="prod_name">Product Name</string>
    <string name="buttonInput">Add</string>
    <string name="buttonCancel">Cancel</string>
    <string name="checkbox">CheckBox</string>
    <string name="btn_del_product">DELETE</string>
    <string name="text_del_product">Do you want to delete the product?</string>
    <string name="setting">Settings</string>
    <string name="recipes">Recipes</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="clean">Clear List</string>
    <string name="description1">Describe the recipe</string>
    <string name="products">Products</string>
    <string name="lists">Lists</string>
    <string name="last_open">Last Opened</string>
    <string name="recipe">Recipe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="other">Other</string>
    <string name="backup">Backup</string>
    <string name="download">Download</string>
    <string name="save">Save</string>
    <string name="paste">Paste</string>
    <string name="error">Error</string>
    <string name="backup_read_error">Restore file is corrupted!</string>
    <string name="accept">Confirm</string>
    <string name="support">About the App</string>
    <string name="reference">Reference</string>
    <string name="instruction">Instruction</string>
    <string name="support_text">For any questions, feedback, or suggestions regarding the app</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enter_the_title">Enter the title</string>
    <string name="such_a_list_exists">Such a list already exists</string>
    <string name="such_a_product_exists">Such a product already exists</string>
    <string name="such_a_recipe_exists">Such a recipe already exists</string>
    <string name="backup_file_created">Backup file created successfully</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="shop_list">"Shopping List"</string>
    <string name="warning_backup">Uploading a restore file will delete current data!</string>
    <string name="ok">OK</string>
    <string name="clear_list">Clear the list?</string>
    <string name="save_file">Save File</string>
    <string name="download_file">Download File</string>
    <string name="backup_read">Restore file loaded</string>
    <string name="input_the_title">Enter the title</string>
    <string name="recipes_for_dialog">Recipes:</string>
    <string name="list_title">List Title</string>
    <string name="delete_list_q">Delete the list?</string>
    <string name="delete_recipe_q">Delete the recipe?</string>
    <string name="edit">Edit</string>
    <string name="sort_summary">Sort items from first added to last added</string>
    <string name="sort_title">Sort by time added</string>
    <string name="support_email">viktor.kh.dev@gmail.com</string>
    <string name="amount">Quantity</string>
    <string name="portions">Portions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="paste_products">Paste Products</string>
    <string name="products_added">Products added</string>
    <string name="product_list_cleared">Product list cleared</string>
    <string name="clean_products">Clear Products</string>
    <string name="clean_products_list">Clear the product list?</string>
    <string name="color_lists">Colored Lists</string>
    <string name="color_lists_summary">Enable color filling for lists</string>
    <string name="color_items">Colored Items</string>
    <string name="color_items_summary">Enable color filling for list items</string>
    <string name="list_is_empty">List is empty</string>
    <string name="element_position">Element Position</string>
    <string name="color">Color</string>
    <string name="app_version">App Version</string>

    <string name="sorting_lists">Sort Lists</string>
    <string name="sorting_items">Sort Items</string>
    <string name="time">Time</string>
    <string name="title">Title</string>
    <string name="color_title_pref">Color -> Title</string>
    <string name="color_time_pref">Color -> Time</string>



</resources>
