<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <PreferenceCategory
        app:title="@string/element_position"
        android:icon="@drawable/ic_baseline_sort_day_night_24">


        <ListPreference
            android:entries="@array/sort_pref_array"
            android:entryValues="@array/sort_pref_array_values"
            android:defaultValue="@string/time_value"
            android:key="@string/sorting_items"
            android:title="@string/sorting_items"
            android:summary="@string/title"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>



    <PreferenceCategory
        app:title="@string/color"
        android:icon="@drawable/ic_baseline_palette_day_night_24">

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/color_items_pref"
        android:title="@string/color_items"
        android:summary="@string/color_items_summary"
        app:iconSpaceReserved="false"
        />
    </PreferenceCategory>


</PreferenceScreen>