<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">



    <TextView
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/backup_text_warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/warning_backup"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_marginTop="80dp"/>




    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/download_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/button_bg_black_ripple"
        android:orientation="horizontal"
        android:textAlignment="center"
        android:text="@string/download_file"
        android:textColor="@color/white"
        android:drawableStart="@drawable/ic_red_file_download_24"
        android:clickable="true"
        android:paddingStart="10dp"
        android:focusable="true"/>




    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/upload_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/download_button"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_bg_black_ripple"
        android:orientation="horizontal"
        android:text="@string/save_file"
        android:textColor="@color/white"
        android:clickable="true"
        android:paddingStart="10dp"
        android:drawableStart="@drawable/ic_green_upload_file_24"
        android:focusable="true"/>









</RelativeLayout>