<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/dialog_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="@color/colorPrimaryDark"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/list_title"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:targetApi="o" />

    <RelativeLayout
        android:layout_below="@+id/dialog_text"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_no"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toStartOf="@id/btn_yes"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/no"
            android:textColor="@color/red" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/button_bg"
            android:text="@string/yes"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorPrimaryDark"
            style="?android:attr/buttonBarButtonStyle" />



    </RelativeLayout>

</RelativeLayout>