<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorPrimary"
    >


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/colors_panel"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="?colorPrimary"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp">

    </androidx.recyclerview.widget.RecyclerView>

    <EditText
        android:id="@+id/dialog_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/colors_panel"
        android:autofillHints=""
        android:background="?colorPrimary"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/list_title"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="?android:textColor"
        android:textColorHint="@color/text_hint"
        android:textSize="20sp"
        tools:targetApi="o"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:layout_marginBottom="10dp"
        />

    <RelativeLayout
        android:layout_below="@+id/dialog_text"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:background="?android:colorPrimary"

        >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_no"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_toStartOf="@id/btn_yes"
            android:backgroundTint="?colorPrimary"
            android:text="@string/no"
            android:textColor="@color/red" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_yes"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_bg"
            android:backgroundTint="?colorPrimary"
            android:text="@string/yes"
            android:textColor="?android:textColor" />



    </RelativeLayout>

</RelativeLayout>